[package]
name = "json-tools"
version = "0.1.0"
edition = "2021"
default-run = "json-resolve"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.6", features = ["derive"] }
indexmap = { version = "1.8.1", features = ["serde"] }
regex = "1.5.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
posix-cli-utils = { git = "https://github.com/ykrist/posix-cli-utils.git" }

[[bin]]
name = "json-resolve"
path = "src/json_resolve.rs"

[[bin]]
name = "json-flatten"
path = "src/json_flatten.rs"

[[bin]]
name = "json2csv"
path = "src/json2csv.rs"
