[package]
name = "json-tools"
version = "0.1.2"
edition = "2021"
default-run = "json-resolve"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
clap = { version = "^3.1", features = ["derive"] }
indexmap = { version = "^1.8", features = ["serde"] }
regex = "^1.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = {version = "^1.0", features = ["preserve_order"] }
posix-cli-utils = { git = "https://github.com/ykrist/posix-cli-utils.git" }
v_escape = { version = "^0.18" }

[[bin]]
name = "json-resolve"
path = "src/json_resolve.rs"

[[bin]]
name = "json-flatten"
path = "src/json_flatten.rs"

[[bin]]
name = "json2csv"
path = "src/json2csv.rs"
